css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #FFF;
  font: 13.34px Helvetica, Arial, sans-serif;
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #000; }
a:visited { color: #a0a; }

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
}

ul.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}

.post-title {
  color: #555555;
  text-shadow: 1px 1px 1px #000000;
  font-weight: bold;
  font-size: 2em;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 115%;
  text-align: justify;
  width: 60%;
  margin-left: 10em;
  line-height: 1.5em;
  padding-top: 3em;
}


.left-pannel {
    padding: 0;
    position: fixed;
    width: 7em;
    border-right-style:solid;
    border-top-style: solid;
    border-bottom-style:solid;
    background: #333333;
    height: 100%;
}

.icon-list {
    height: 80%;
    margin: auto;
    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
}

.icon {
    margin: 1em;
    list-style-type: none;
}

.excerpt {
    margin-top: 0;
    margin-left: 2em;
}

a.black {fill: #333;}
a {fill: #FFFFFF;text-decoration: none;}
a:hover {fill: #268ED4;}

.header {
  position: relative;
}

.rss{
  right: 0px;
  width: 8em;
  top: 0px;
  position: absolute;
}

.site .header a {
  font-weight: bold;
  text-decoration: none;
}

.site .header h1.title {
  display: inline-block;
  margin-bottom: 2em;
}

.site .header h1.title a {
  color: #a00;
}

.site .header h1.title a:hover {
  color: #000;
}

.site .header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.site .header a.extra:hover {
  color: #000;
}

.site .meta {
  color: #aaa;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}

.site .footer .contact {
  float: left;
  margin-right: 3em;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}

/*****************************************************************************/
/*
/* Mobile
/*
/*****************************************************************************/

@media (max-width: 800px) {
  .rss {
    display: none;
  }
}

@media (max-width: 600px) {
  .left-pannel {
    display: none;
  }

  .site {
    margin-left: 1em;
    width: 90%;
  }
}
/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
  white-space: pre-wrap;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

img {
  min-width: 100%;
  max-width: 100%;
  height: auto;
}

